--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "app/main.js",
   "repository": "https://github.com/ZeroAurora/Crafter.git",
   "author": "ZeroAurora",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "electron": "^2.0.4"
+  }
 }
